[package]
name = "fnlt-cli"
version = "0.0.1"
edition = "2021"
description = "a 'lite' functional language implementation"
license = "MIT"

[dependencies]
clap = { version = "4.5.23", features = ["cargo", "derive"] }
env_logger = "0.11.6"
eyre = "0.6.12"
log = "0.4.22"

[dev-dependencies]
cucumber = "0.22.1"
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }

[[test]]
name = "cli"
harness = false
