[package]
name = "fnlt"
version = "0.0.1"
edition = "2021"
description = "a 'lite' functional language"
license = "MIT"

[dependencies]
bigdecimal = "0.4"
env_logger = "0.11.6"
log = "0.4.22"
nom = "7.1"
regex = "1.11.1"
thiserror = "2.0.9"

[dev-dependencies]
bigdecimal = "0.4"
ctor = "0.6.3"
cucumber = "0.22.1"
tokio = { version = "1.42.0", features = ["full"] }

[[test]]
name = "ast"
harness = false
